add jwt authentication